# fake-standard-okfile

./: .gitignore  LICENSE  README.md  RFC-0001-OKFILE.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml  vercel-deploy.yml
conformance-lab/: README.md
docs/: IMPLEMENTATION-GUIDE.md
fixtures/: vectors.json
okfile/: __init__.py  cli.py  conformance.py
site/: index.html  styles.css
tests/: test_okfile_conformance.py
tools/: okfile_conformance.py
